kubernetes/traffic/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boobit-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boobit-nginx
  template:
    metadata:
      labels:
        app: boobit-nginx
    spec:
      containers:
      - name: boobit-nginx
        image: nginx:latest
        ports:
        - containerPort: 30000
          name: auth-db
        - containerPort: 31000
          name: balance-db
        - containerPort: 32123
          name: redis
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
