kubernetes/traffic/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: boobit-lb
  annotations:
    service.beta.kubernetes.io/ncloud-load-balancer-retain-public-ip-on-termination: 'true'
spec:
  loadBalancerIP: 223.130.146.186
  type: LoadBalancer
  selector:
    app: boobit-nginx
  ports:
    - name: auth-db
      port: 30000
      targetPort: 30000
      protocol: TCP
    - name: balance-db
      port: 31000
      targetPort: 31000
      protocol: TCP
    - name: session-db
      port: 32123
      targetPort: 32123
      protocol: TCP
